--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 # Changes here will be overwritten by Copier
 _commit: 1.4.2
-_src_path: /home/runner/work/copier-uv/copier-uv
+_src_path: gh:pawamoy/copier-uv
 author_email: dev@pawamoy.fr
 author_fullname: Timothee Mazzucotelli
 author_username: pawamoy
